--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-pandas
-matplotlib
-plotly
-streamlit
-numpy
+streamlit==1.32.2
+pandas==2.1.4
+numpy==1.26.4
+plotly==5.18.0
 altair==4.2.2
-imghdr
